<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:padding="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/eventTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headingHostTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_view_section_host_heading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/valueHostCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingHostTextView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profilePhotoImageView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/event_view_section_host_profile_image_content_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/valueHostTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profilePhotoImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button

                    android:id="@+id/verifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:visibility="gone"
                    android:text="@string/event_view_section_host_button_view"
                    app:layout_constraintStart_toEndOf="@+id/profilePhotoImageView"
                    app:layout_constraintTop_toBottomOf="@+id/valueHostTextView" />

                <ImageView
                    android:id="@+id/verifyIconImage"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:src="@drawable/verify"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePhotoImageView"
                    app:layout_constraintStart_toStartOf="@+id/valueHostTextView"
                    app:layout_constraintTop_toBottomOf="@+id/valueHostTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/headingAboutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_view_section_about_heading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueHostCardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/valueAboutCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingAboutTextView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/valueAboutTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"  />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/headingTimeAndDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_view_section_time_and_date_heading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueAboutCardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/valueTimeAndDateCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingTimeAndDateTextView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/valueTimeAndDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"  />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/headingLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_view_section_location_heading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueTimeAndDateCardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/valueLocationCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingLocationTextView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/event_view_section_location_map_content_description"
                    map:cameraZoom="17"
                    map:uiCompass="true"
                    map:uiRotateGestures="true"
                    map:uiScrollGestures="true"
                    map:uiTiltGestures="true"
                    map:uiZoomControls="true"
                    map:uiZoomGestures="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>