<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CreateHabitFragment" >

    <EditText
        android:id="@+id/editTextHabitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/habit_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:text="@string/submit_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHabitName" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />

    <TextView
        android:id="@+id/labelDropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="What kind of habit is this"
        app:layout_constraintTop_toBottomOf="@+id/editTextHabitName"
        tools:layout_editor_absoluteX="-4dp" />

    <RadioGroup
        android:id="@+id/typeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checkedButton="@id/rbStudy"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDropDown">

        <RadioButton
            android:id="@+id/rbStudy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Study" />

        <RadioButton
            android:id="@+id/rbWorkOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Work Out"

            />

        <RadioButton
            android:id="@+id/rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/freqChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:checkedButton="@id/rbDaily"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="258dp">

        <RadioButton
            android:id="@+id/rbDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Daily" />

        <RadioButton
            android:id="@+id/rbWeekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weekly" />

        <RadioButton
            android:id="@+id/rdMonthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monthly" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>